--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <div class="left"></div>
+        <div class="mid">
+            <form>
+                <input type="text" placeholder="Rechercher">
+                <button></button>
+            </form>
+
+            <button></button>
+        </div>
+        <div class="right">
+            <p>A</p>
+        </div>
+    </nav>
     <main>
         <div class="left">
             <div class="video"></div>
