--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+
     <nav>
         <div class="left"></div>
         <div class="mid">
             <form>
                 <input type="text" placeholder="Rechercher">
-                <button></button>
+                
+                <button><i class="fa fa-search"></i></button>
             </form>
-
-            <button></button>
+            <i class="material-icons">mic</i>
+            <button><i class="fa fa-microphone"></i></button>
+            
         </div>
         <div class="right">
             <p>A</p>
+
         </div>
     </nav>
     <main>
