--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Document Mini Bootcamp</title>
 </head>
 <body>
 
